test/fail/basic_syntax/docstring_inconsistent_indent.lly
#[
SyntaxError: Docstring has inconsistent indentation.
    from docstring_inconsistent_indent.lly:7
]#

### asdf
    ### 1234
define f {}
